--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -8,35 +8,62 @@
 
     <Spinner
         android:id="@+id/spinner_shelf"
+        style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="240dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinner_position"
+        style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginEnd="176dp"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner_shelf"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/spinner_shelf"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/edit_amount"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner_position"
+        app:layout_constraintEnd_toEndOf="@+id/button_inventory" />
 
     <Button
-        android:id="@+id/button_query"
+        android:id="@+id/button_inventory"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
-        android:text="查询"
+        android:background="@color/colorPrimaryDark"
+        android:text="单项盘点"
         android:textColor="@color/layout_background"
         android:textSize="20dp"
-        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_shelf" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_amount" />
+
+    <Button
+        android:id="@+id/button_inventory_over"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="查看盘点报表"
+        android:textColor="@color/layout_background"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/button_inventory"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/button_inventory"
+        app:layout_constraintTop_toBottomOf="@+id/button_inventory" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
