原需求基本已全部实现

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="layout_background">#FAFAFA</color>
     <color name="pick_button">#4CAF50</color>
     <color name="picked_button">#AFAFAF</color>
+    <color name="profit">#4CAF50</color>
+    <color name="loss">#F44336</color>
 </resources>
