--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -12,16 +12,16 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="220dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinner_position"
         style="@style/Widget.AppCompat.Spinner.Underlined"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="176dp"
+        android:layout_marginEnd="156dp"
         app:layout_constraintBottom_toBottomOf="@+id/spinner_shelf"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/spinner_shelf"
@@ -34,6 +34,19 @@
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/spinner_position"
         app:layout_constraintEnd_toEndOf="@+id/button_inventory" />
+
+    <TextView
+        android:id="@+id/text_clothes_id"
+        android:layout_width="280dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_amount"
+        style="@style/Widget.AppCompat.EditText"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/button_inventory"
@@ -49,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_amount" />
+        app:layout_constraintTop_toBottomOf="@+id/text_clothes_id" />
 
     <Button
         android:id="@+id/button_inventory_over"
@@ -58,7 +71,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorPrimaryDark"
-        android:text="查看盘点报表"
+        android:text="盘点完成，查看报表"
         android:textColor="@color/layout_background"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/button_inventory"
