--- a/app/src/main/res/layout/activity_inventory_assign.xml
+++ b/app/src/main/res/layout/activity_inventory_assign.xml
@@ -8,45 +8,62 @@
     tools:context=".view.MainActivity">
 
     <EditText
-        android:id="@+id/text_amount"
+        android:id="@+id/edit_staff_id"
         android:layout_width="280dp"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="148dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:hint="请输入服装ID"
+        android:hint="请输入要分配任务的职工号"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_store"
+        android:id="@+id/button_add"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="查询"
+        android:text="添加"
         android:textColor="@color/layout_background"
         android:textSize="20dp"
         android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_amount" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_staff_id" />
+
+    <Button
+        android:id="@+id/button_assign"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="分配任务"
+        android:textColor="@color/layout_background"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_add" />
 
     <TextView
-        android:id="@+id/text_query"
+        android:id="@+id/text_staff"
         android:layout_width="280dp"
         android:layout_height="280dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_store"
         android:gravity="center_horizontal"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_assign" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
